# syft-nsai-sdk

./: .env.example  .gitignore  CHANGELOG.md  GITHUB_ACTIONS_SETUP.md  LAUNCH_GUIDE.md  README.md  app.py  conversation.ipynb  main.py  pyproject.toml  quickstart.ipynb  run.sh  syft_nsai_sdk.ipynb  test.ipynb
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  publish.yml  release.yml
docs/: ai-services.html  attribution.html  authentication.html  index.html  quickstart.html  styles.css
notebooks/: authentication.ipynb  chat.ipynb  conversation.ipynb  demo_attribution_control.ipynb  discovery.ipynb  models.ipynb  old_pipeline.ipynb  pipeline.ipynb  quickstart.ipynb  search.ipynb  syft_nsai_sdk.ipynb  test.ipynb
syft_hub/: __init__.py  main.py
syft_hub/clients/: __init__.py  accounting_client.py  auth_client.py  endpoint_client.py  request_client.py  rpc_client.py
syft_hub/core/: __init__.py  config.py  decorators.py  pipeline.py  service.py  settings.py
syft_hub/discovery/: __init__.py  index.py  parser.py  scanner.py
syft_hub/models/: pipeline.py  responses.py  service_info.py  services_list.py  services_widget.py  validation.py
syft_hub/services/: chat.py  health.py  search.py
syft_hub/utils/: async_utils.py  estimator.py  formatting.py  validator.py
syft_hub/views/: services_widget.py
syft_nsai_sdk/: __init__.py  config.py  logger.py  main.py  models.py  sdk.py  types.py
syft_nsai_sdk/cli/: commands.py  display.py
syft_nsai_sdk/clients/: accounting_client.py  auth.py  endpoint_client.py  old_rpc_client.py  request_client.py  rpc_client.py
syft_nsai_sdk/core/: __init__.py  app_settings.py  config.py  decorators.py  exceptions.py  pipeline.py  service.py  types.py
syft_nsai_sdk/discovery/: filters.py  index.py  old_parser.py  parser.py  scanner.py
syft_nsai_sdk/models/: model_info.py  models_list.py  models_widget.py  requests.py  responses.py  service_info.py  services_list.py  services_widget.py
syft_nsai_sdk/networking/: auth.py  client.py  rpc_client.py
syft_nsai_sdk/services/: chat.py  health.py  requests.py  responses.py  search.py  service_info.py  services_list.py  services_widget.py
syft_nsai_sdk/utils/: caching.py  estimator.py  formatting.py  logger.py  validation.py
