[project]
name = "syft-nsai-sdk"
version = "0.1.0"
description = "Syft NSAI SDK"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "syft-core>=0.2.7",
    "fastsyftbox>=0.1.19",
    "ipython>=8.18.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "typer>=0.15.2",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "syft-accounting-sdk @ git+https://github.com/OpenMined/accounting-sdk.git",
    "PyJWT>=2.10.1",
    "tabulate>=0.9.0",
    "aiohttp>=3.8.0",
    "colorama>=0.4.6",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.3.1",
]

[project.scripts]
syft-sdk = "main:cli_app"

[tool.uv]
dev-dependencies = [
    "openai>=1.70.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
]