[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "syft-nsai-sdk"
version = "0.1.0"
description = "Python SDK for discovering and using AI models across the SyftBox network"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
    {name = "SyftBox Team", email = "support@syftbox.net"},
]
maintainers = [
    {name = "SyftBox Team", email = "support@syftbox.net"},
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "syft-core>=0.2.7",
    "fastsyftbox>=0.1.19",
    "ipython>=8.18.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "typer>=0.15.2",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "syft-accounting-sdk @ git+https://github.com/OpenMined/accounting-sdk.git",
    "PyJWT>=2.10.1",
    "tabulate>=0.9.0",
    "aiohttp>=3.8.0",
    "colorama>=0.4.6",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
chat = [
    "aiohttp>=3.8.0",
]
search = [
    "httpx>=0.24.0",
]
all = [
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://syftbox.openmined.org"
Documentation = "https://docs.syftbox.openmined.org/nsai-sdk"
Repository = "https://github.com/OpenMined/syftbox-nsai-sdk"
"Bug Tracker" = "https://github.com/OpenMined/syftbox-nsai-sdk/issues"
Changelog = "https://github.com/OpenMined/syftbox-nsai-sdk/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["syft_nsai_sdk"]

[project.scripts]
syftbox-sdk = "syft_nsai_sdk.cli:main"

[tool.hatch.version]
path = "syft_nsai_sdk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["syft_nsai_sdk"]

testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "openai>=1.70.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
]